--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
